--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc src/server.ts",
     "start:build": "node src/server.js",
-    "lint": "eslint src --ext .ts --fix"
+    "lint": "eslint src --ext .ts --fix",
+    "knex": "node --loader tsx ./node_modules/.bin/knex"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "fastify": "^4.20.0",
+    "knex": "^2.5.1",
+    "sqlite3": "^5.1.6",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
